fix: wrap and center

--- a/styles/Countdown.module.css
+++ b/styles/Countdown.module.css
@@ -1,3 +1,5 @@
 .clockText {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
